# rey

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check-and-lint.yaml  rust.yml
src/: arg.rs  client.rs  lib.rs  main.rs  report.rs  work.rs
