[package]
name = "rey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
tera = "1.19.1"
serde = { version = "1.0.192", features = ["derive"] }
human_bytes = "0.4"
clap = "4.4.8"
thiserror = "1.0.50"
duration-str = "0.7.0"