[package]
name = "rey"
version = "0.1.0"
edition = "2021"
authors = ["Apodemakeles <apodemakeles@icloud.com>"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
tera = "1.19.1"
serde = { version = "1.0.192", features = ["derive"] }
human_bytes = "0.4"
clap = { version = "4.4.8", features = ["derive"] }
thiserror = "1.0.50"
duration-str = "0.7.0"
http = "0.2.11"
lazy_static = "1.4.0"
anyhow = "1.0.75"
flexi_logger = { version = "0.27", features = ["async"] }
